--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/sbosshardt/scrape-solana-epochs/issues"
   },
-  "homepage": "https://github.com/sbosshardt/scrape-solana-epochs#readme"
+  "homepage": "https://github.com/sbosshardt/scrape-solana-epochs#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "playwright": "^1.43.0"
+  }
 }
